force-app/main/default/objects/Product2/fields/ExpectedLifespan__c.field-meta.xml
<CustomField>
    <fullName>ExpectedLifespan__c</fullName>
    <label>ExpectedLifespan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>