force-app/main/default/objects/Product2/fields/ExpectedLifespanUOM__c.field-meta.xml
<CustomField>
    <fullName>ExpectedLifespanUOM__c</fullName>
    <label>ExpectedLifespanUOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>