force-app/main/default/objects/Product2/fields/ExpectedLifetimeUsage__c.field-meta.xml
<CustomField>
    <fullName>ExpectedLifetimeUsage__c</fullName>
    <label>ExpectedLifetimeUsage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>