force-app/main/default/objects/Product2/fields/ExpectedLifetimeUsageUOM__c.field-meta.xml
<CustomField>
    <fullName>ExpectedLifetimeUsageUOM__c</fullName>
    <label>ExpectedLifetimeUsageUOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>